# eriplots-python

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  RELEASES.md  justfile  pyproject.toml
.github/workflows/: ci.yml
src/eriplots/: __init__.py  colormaps.py  mpl.py  palettes.py  savefig.py  styles.py
tests/: test_colormaps.py  test_mpl.py  test_savefig.py  test_styles.py
