[project]
name = "eriplots"
version = "0.2.1.dev0"
description = """
    A collection of tools for creating clean and consistent plots
    using matplotlib. Provides standardized themes and tools for
    saving figures that make it easier to follow good practices.
    """
authors = [
    { name = "Tom Shafer", email = "tom.shafer@elderresearch.com" },
    { name = "Robert Robison", email = "robert.robison@elderresearch.com" },
]
requires-python = ">=3.10"
dependencies = ["cycler>=0.12.1", "matplotlib>=3.9.4"]
license = "MIT"
license-files = ["LICENSE.md"]

[project.optional-dependencies]
webp = ["pillow>=11.1.0"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.10.0",
    "jupyter>=1.1.1",
    "pytest-mock>=3.14.0",
    "nbstripout>=0.8.1",
    "pytest-cov>=6.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning:matplotlib"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["eriplots"]
known-third-party = ["matplotlib", "numpy", "pytest"]
